--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "react-icons": "^4.1.0",
     "shopify-buy": "^2.11.0",
     "urql": "^2.0.2"
+  },
+  "devDependencies": {
+    "@netlify/plugin-gatsby": "^1.0.3"
   }
 }
